# robosuite

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _config.yml  demo.py  env.xml  index.md  output_dc.xml  output_orig.xml  pyproject.toml  rb3_test.py  requirements-extra.txt  requirements.txt  setup.py  source_env.sh
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
_includes/: base.html  core_members.html  founding_team.html
_layouts/: main.html
act/: eval.py  train.py
docs/: .buildinfo  Makefile  acknowledgement.html  acknowledgement.md  basicusage.html  basicusage.md  changelog.html  changelog.md  conf.py  creating_environment.md  creating_object.md  demonstrations.md  demos.html  demos.md  genindex.html  index.html  index.rst  indicator_object.md  installation.html  installation.md  make.bat  objects.inv  overview.html  overview.md  py-modindex.html  quickstart.md  references.html  references.md  scripts.md  search.html  searchindex.js
recordings/: gr1_eef_targets_gr1_w_hands_from_avp_preprocessor.pkl
robosuite/: CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  __init__.py  check_robomimic_hdf5.py  check_state.py  demo.py  demo_control.py  macros.py  (+16 more)
robosuite/models/assets/bullet_data/sawyer_description/: CMakeLists.txt  package.xml
robosuite/models/assets/bullet_data/sawyer_description/launch/: test_sawyer_description.launch.test
robosuite/models/assets/bullet_data/sawyer_description/params/: named_poses.yaml
robosuite/models/assets/bullet_data/sawyer_description/urdf/: sawyer.urdf  sawyer_arm.urdf
(+1944 files in other folders)
